--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     
                     <div class="descricao">
                         <p>
-                            Oi! Meu nome é Jefferson, seja bem vindo(a)!
+                            Oi! Meu nome é Sherlock, seja bem vindo(a)!
                         </p>
                         
                         <p>
