adicionado o link para o meu github

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <a href="" target="_blank" class="linkedin">Linkedin</a>
                         </li>
                         <li>
-                            <a href="" target="_blank" class="github">GitHub</a>
+                            <a href="https://github.com/jeffsan-dev" target="_blank" class="github">GitHub</a>
                         </li>
                     </ul>
                 </div>
