--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main class="cartao">
         <div class="minhas-informacoes">
             <img src="./src/imagens/foto-perfil.jpg" alt="Rena" width="96" height="96">
-            <h1 class="nome">Jefferson Santos.</h1>
+            <h1 class="nome">Jefferson S</h1>
             <h4 class="cargo">Dev. FrontEnd Jr</h4>
         </div>
         <div class="conteudo">
